# geometry

./: Cargo.toml  README.md
src/: geometry.rs  lib.rs  model.rs  normal_range.rs  object.rs  texture_range.rs  vertex_range.rs
