[package]

name = "geometry"
version = "0.0.12"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["geometry", "3D", "piston"]
description = "A structure for storing and look up 3D geometry"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/geometry.git"
homepage = "https://github.com/PistonDevelopers/geometry"

[lib]

name = "geometry"
path = "src/lib.rs"

[dependencies.range]
git = "https://github.com/pistondevelopers/range"
#version = "0.0.6"

[dependencies.wavefront_obj]
git = "https://github.com/PistonDevelopers/wavefront_obj"
#version = "0.0.0"

[dependencies.quack]
git = "https://github.com/pistondevelopers/quack"
#version = "0.0.0"
